@@ -28,12 +28,15 @@ NOTE: This release is based on XINS 1.0.0-beta11.
 * Generation of specification documentation:
   - Fixed bug #1061692: A NullPointerException was thrown when using
     Java 1.4.0 or Java 1.4.1.
+  - Fixed bug #1064487: The function name is not written in the examples.
 
 * Generation of server-side Java code:
   - Fixed bug #1061692: A NullPointerException was thrown when using
     Java 1.4.0 or Java 1.4.1.
   - Fixed bug #1063006: log.xml with alpha DTD fails if no server reachable.
   - Fixed bug #1036854: Reset logging subsystem when reloading.
+  - If the "org.xins.server.config.reload" is zero the FileWatcher won't be 
+    started.
 
 * Generation of types Java code:
   - Fixed bug #1061692: A NullPointerException was thrown when using
